--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 
  :root{
     /* Primary colours*/
-
     --Blue: hsl(246, 80%, 60%);
     --LightRedWork: hsl(15, 100%, 70%); /*(work)*/
     --SoftBlue: hsl(195, 74%, 62%); /* (play) */
@@ -17,8 +16,6 @@
     --DesaturatedBlue: hsl(235, 45%, 61%);
     --PaleBlue: hsl(236, 100%, 87%);
 }
-
-/* Font size: 18px (card titles e.g. Work, Play) */
 
 body{
     background-color: var(--VeryDarkBlue);
@@ -143,7 +140,6 @@ div.selected{
 .work{
     background-color: var(--LightRedWork);
     background-image: url('/images/icon-work.svg');
-
 }
 
 .play{
@@ -200,7 +196,6 @@ div.selected{
     }
     h2{
         font-size: 2.15em;
-        
         margin-left: -2px;
     }
     .user ul{
@@ -208,9 +203,9 @@ div.selected{
         padding-bottom: 0px;
     }
     .user li{
-
         margin: 10px 0 15px 40px;
     }
+
     .work, .play, .exercise, .study, .self-care, .social{  
         background-size: 45px;
         padding-top: 30px; 
@@ -231,8 +226,7 @@ div.selected{
         flex-wrap: wrap;
     }
     .selected span:first-child{
-        font-size: 3.2em;
-        
+        font-size: 3.2em;    
     }
     /* hover effect */
     .activity img:hover{
@@ -242,11 +236,20 @@ div.selected{
         cursor: pointer;
         color: var(--PaleBlue);
     }
-    div.selected:hover{
+    /* div.selected:hover, div.activity:hover{
         background-color: var(--DesaturatedBlue);
         cursor: pointer;
     }
-    div.activity:hover{
-        cursor: pointer;
+    div.activity:hover ~ div.selected{
+        background-color: var(--DesaturatedBlue);
+    }
+    div.selected:hover ~ div.activity{
+        background-color: var(--DesaturatedBlue);
+    } */
+     .wrapper{
+        border-radius: 10px;
+     }
+    .wrapper:hover > .activity, .wrapper:hover > .selected{
+        background-color: var(--DesaturatedBlue);
     }
 }
