--- a/styles.css
+++ b/styles.css
@@ -179,11 +179,13 @@ div.selected{
     main{
         overflow: hidden;
         display: grid;
-        row-gap: 20px;
+        height: 78%;
+        row-gap: 30px;
         grid-template-columns: repeat(4, 1fr);
-        grid-auto-rows: minmax(150px, auto);
-         width: 900px;
+        grid-auto-rows: minmax(200px, auto);
+        width: 900px;
     }
+    
     .user{
         grid-column: 1;
         grid-row: span 2;
@@ -208,6 +210,7 @@ div.selected{
 
     .work, .play, .exercise, .study, .self-care, .social{  
         background-size: 45px;
+        border-radius: 10px;
         padding-top: 30px; 
         margin: 0px;
         width: 190px;
@@ -224,6 +227,7 @@ div.selected{
     }
     div.selected{
         flex-wrap: wrap;
+        border-radius: 0 0 10px 10px;
     }
     .selected span:first-child{
         font-size: 3.2em;    
@@ -236,16 +240,6 @@ div.selected{
         cursor: pointer;
         color: var(--PaleBlue);
     }
-    /* div.selected:hover, div.activity:hover{
-        background-color: var(--DesaturatedBlue);
-        cursor: pointer;
-    }
-    div.activity:hover ~ div.selected{
-        background-color: var(--DesaturatedBlue);
-    }
-    div.selected:hover ~ div.activity{
-        background-color: var(--DesaturatedBlue);
-    } */
      .wrapper{
         border-radius: 10px;
      }
